data cleaning/convertingfiles created, added to data/init

--- a/notebooks/data_extraction.ipynb
+++ b/notebooks/data_extraction.ipynb
@@ -30,10 +30,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
    "source": [
-    "from ift6758.data import NHLLoader"
+    "from ift6758.data import NHLLoader\n"
    ],
+   "outputs": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -44,86 +44,86 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "source": [
+    "# Download initial data\n",
+    "NHLLoader.from_api(out_dir='../data/raw/')"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "getting season 20172018 game ids\n",
       "getting game data\n"
      ]
     },
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "100%|██████████| 1466/1466 [06:22<00:00,  3.83it/s]\n"
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "getting season 20182019 game ids\n",
       "getting game data\n"
      ]
     },
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "100%|██████████| 1471/1471 [06:23<00:00,  3.84it/s]\n"
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "getting season 20192020 game ids\n",
       "getting game data\n"
      ]
     },
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "100%|██████████| 1334/1334 [05:44<00:00,  3.87it/s]\n"
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "getting season 20202021 game ids\n",
       "getting game data\n"
      ]
     },
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "100%|██████████| 952/952 [05:00<00:00,  3.17it/s]\n"
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "getting season 20212022 game ids\n",
       "getting game data\n"
      ]
     },
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "100%|██████████| 1507/1507 [07:06<00:00,  3.54it/s]\n"
      ]
     }
-   ],
-   "source": [
-    "# Download initial data\n",
-    "NHLLoader.from_api(out_dir='../data/raw/')"
    ],
    "metadata": {
     "collapsed": false,
@@ -135,10 +135,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "source": [
+    "NHLLoader.from_gdrive(out_dir=\"../data/raw/\")"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1Swfx9TAEReBMXkuPwwAR-hHlU1NuAXVt\n",
@@ -146,9 +149,6 @@
       "100%|██████████| 208M/208M [00:12<00:00, 16.1MB/s] \n"
      ]
     }
-   ],
-   "source": [
-    "NHLLoader.from_gdrive(out_dir=\"../data/raw/\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -178,5 +178,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
