cleaning file name update

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -20,223 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "source": [
-    "data_folder = 'ift6758/data/raw/NHL/'\n",
-    "# for filename in os.listdir(data_folder):\n",
-    "f = open(data_folder+'20162017.json')\n",
-    "data = json.load(f)\n",
-    "i = 0\n",
-    "print(type(data))\n",
-    "\n",
-    "# for line in data:\n",
-    "#     i+=1\n",
-    "#     print(line)\n",
-    "#     if i>3: break\n",
-    "\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<class 'dict'>\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "source": [
-    "data[list(data.keys())[0]][0].keys()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "dict_keys(['copyright', 'gamePk', 'link', 'metaData', 'gameData', 'liveData'])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "source": [
-    "data['20162017'][0]['liveData']['plays']['allPlays']\n",
-    "\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'players': [{'player': {'id': 8477939,\n",
-       "    'fullName': 'William Nylander',\n",
-       "    'link': '/api/v1/people/8477939'},\n",
-       "   'playerType': 'Blocker'},\n",
-       "  {'player': {'id': 8470602,\n",
-       "    'fullName': 'Dion Phaneuf',\n",
-       "    'link': '/api/v1/people/8470602'},\n",
-       "   'playerType': 'Shooter'}],\n",
-       " 'result': {'event': 'Blocked Shot',\n",
-       "  'eventCode': 'OTT204',\n",
-       "  'eventTypeId': 'BLOCKED_SHOT',\n",
-       "  'description': 'William Nylander blocked shot from Dion Phaneuf'},\n",
-       " 'about': {'eventIdx': 10,\n",
-       "  'eventId': 204,\n",
-       "  'period': 1,\n",
-       "  'periodType': 'REGULAR',\n",
-       "  'ordinalNum': '1st',\n",
-       "  'periodTime': '02:05',\n",
-       "  'periodTimeRemaining': '17:55',\n",
-       "  'dateTime': '2016-10-12T23:20:54Z',\n",
-       "  'goals': {'away': 0, 'home': 0}},\n",
-       " 'coordinates': {'x': 56.0, 'y': -2.0},\n",
-       " 'team': {'id': 10,\n",
-       "  'name': 'Toronto Maple Leafs',\n",
-       "  'link': '/api/v1/teams/10',\n",
-       "  'triCode': 'TOR'}}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 56
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "source": [
     "\n",
-    "import pandas as pd\n",
-    "import json\n",
-    "\n",
-    "\n",
-    "class NHLConverter:\n",
-    "    \"\"\"\n",
-    "    Class to convert data from raw json to interpretable table with following constraints\n",
-    "    \"all events of every game into a pandas dataframe,include events of the type “shots” and “goals”, ignore missed shots or blocked shots for now\"\n",
-    "    Features :  \n",
-    "        - game time/period information, \n",
-    "        - game ID, team information (which team took the shot), \n",
-    "        - indicator if its a shot or a goal, \n",
-    "        - the on-ice coordinates, \n",
-    "        - the shooter  \n",
-    "        - goalie name (don’t worry about assists for now), \n",
-    "        - shot type, \n",
-    "        - if it was on an empty net\n",
-    "        - whether or not a goal was at even strength, shorthanded, or on the power play\n",
-    "    \"\"\"\n",
-    "    # liveData/plays/\n",
-    "    def __init__(self, json_fn: str) -> None:\n",
-    "        self.json_fn = json_fn\n",
-    "        \n",
-    "    def pull_json(self) -> None:  \n",
-    "        f = open(self.json_fn)\n",
-    "        loaded_data = json.load(f)\n",
-    "\n",
-    "        if len(loaded_data.keys()) == 1:        # Store dictionary with shot info, remove copyright\n",
-    "            # print(loaded_data[list(loaded_data.keys())[0]])\n",
-    "            \n",
-    "            self.raw_data = loaded_data[list(loaded_data.keys())[0]]\n",
-    "            print(len(self.raw_data))\n",
-    "        else:\n",
-    "            print('Wrong format')\n",
-    "\n",
-    "\n",
-    "    def convert_season(self) -> pd.DataFrame:\n",
-    "\n",
-    "        cols = ['game starttime', 'game endtime', 'gameId','offense_team_id', 'offense_team_name', 'offense_team_tricode','goal', 'x_coords', 'y_coords', 'goalie_id', 'goalie_name', 'shooter_id', 'shooter_name', 'shot type', 'empty net', 'strength_shorthand', 'strength_even', 'strength_powerplay']\n",
-    "        selec_data = []\n",
-    "        game_id = 0\n",
-    "        for game in self.raw_data:\n",
-    "            # print(game_id)\n",
-    "            game_endtime = game['gameData']['datetime']['endDateTime']\n",
-    "            game_starttime = game['gameData']['datetime']['dateTime']\n",
-    "            \n",
-    "            event_list = game['liveData']['plays']['allPlays']\n",
-    "            \n",
-    "            for event in event_list: \n",
-    "                if event['result']['event'] == 'Shot' or event['result']['event'] == 'Goal':\n",
-    "\n",
-    "                    curr_event = [game_starttime, game_endtime, game_id]\n",
-    "                    curr_event.append(event['team']['id'])\n",
-    "                    curr_event.append(event['team']['name'])\n",
-    "                    curr_event.append(event['team']['triCode'])\n",
-    "                    # curr_event.append(event['result']['event'])\n",
-    "                    curr_event.append(0 if event['result']['event']== 'Shot' else 1)\n",
-    "                    curr_event.append(event['coordinates'].get('x', None))\n",
-    "                    curr_event.append(event['coordinates'].get('y', None))\n",
-    "                    for p in event['players']:\n",
-    "                        if p['playerType'] == 'Goalie':\n",
-    "                            goalie_id = p['player']['id']\n",
-    "                            goalie_name = p['player']['fullName']\n",
-    "                        elif p['playerType'] == 'Shooter' or p['playerType'] == 'Scorer':\n",
-    "                            shooter_id = p['player']['id']\n",
-    "                            shooter_name = p['player']['fullName']\n",
-    "                    curr_event.append(goalie_id)\n",
-    "                    curr_event.append(goalie_name)\n",
-    "                    curr_event.append(shooter_id)\n",
-    "                    curr_event.append(shooter_name)\n",
-    "                    \n",
-    "                    curr_event.append(event['result'].get('secondaryType', None))\n",
-    "\n",
-    "                    if event['result']['event'] == 'Goal':\n",
-    "                        curr_event.append(event['result'].get('emptyNet', None))\n",
-    "                        ## \n",
-    "                        if event['result']['strength'].get('code', None) == 'EVEN': \n",
-    "                            curr_event.append(0)\n",
-    "                            curr_event.append(1)\n",
-    "                            curr_event.append(0)\n",
-    "                        elif event['result']['strength'].get('code', None) == 'PPG': \n",
-    "                            curr_event.append(0)\n",
-    "                            curr_event.append(0)\n",
-    "                            curr_event.append(1)\n",
-    "                        else: \n",
-    "                            curr_event.append(1)\n",
-    "                            curr_event.append(0)\n",
-    "                            curr_event.append(0)\n",
-    "                    else:\n",
-    "                        curr_event.append(False)\n",
-    "                        curr_event.append(None)\n",
-    "\n",
-    "                    \n",
-    "                    selec_data.append(curr_event)\n",
-    "                    game_id+=1\n",
-    "        print(game_id)\n",
-    "\n",
-    "        return pd.DataFrame(selec_data, columns=cols)\n",
-    "\n",
-    "        \n",
-    "    "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "source": [
-    "# pd.DataFrame.from_dict(data['20162017'][0]['liveData']['plays']['allPlays'][0]['result'], orient='index')\n",
-    "# pd.DataFrame.from_dict(data['20162017'][0]['liveData']['plays']['allPlays'][0]['about'], orient='index')\n",
-    "# game = data['20162017'][0]\n",
-    "\n",
-    "# from ift6758.data import NH?LConverter\n",
     "converter = NHLConverter('ift6758/data/raw/NHL/20162017.json')\n",
     "\n",
-    "converter.pull_json()\n",
-    "# convert_season()\n",
-    "\n",
-    "# json.loads('/ift6?758/data/raw/NHL/')\n"
+    "converter.pull_json()\n"
    ],
    "outputs": [
     {
@@ -251,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "source": [
     "clean = converter.convert_season()"
    ],
@@ -268,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 87,
    "source": [
     "clean.iloc[:10, :]"
    ],
@@ -310,7 +99,9 @@
        "      <th>shooter_name</th>\n",
        "      <th>shot type</th>\n",
        "      <th>empty net</th>\n",
-       "      <th>strength</th>\n",
+       "      <th>strength_shorthand</th>\n",
+       "      <th>strength_even</th>\n",
+       "      <th>strength_powerplay</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -332,6 +123,8 @@
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -350,6 +143,8 @@
        "      <td>Chris Kelly</td>\n",
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -370,6 +165,8 @@
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -388,6 +185,8 @@
        "      <td>Erik Karlsson</td>\n",
        "      <td>Slap Shot</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -408,6 +207,8 @@
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -427,6 +228,8 @@
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -445,7 +248,9 @@
        "      <td>Auston Matthews</td>\n",
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -464,6 +269,8 @@
        "      <td>Matt Martin</td>\n",
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -484,6 +291,8 @@
        "      <td>Slap Shot</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -502,6 +311,8 @@
        "      <td>Erik Karlsson</td>\n",
        "      <td>Wrist Shot</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -545,21 +356,21 @@
        "8    8475883  Frederik Andersen     8474578    Erik Karlsson   Slap Shot   \n",
        "9    8475883  Frederik Andersen     8474578    Erik Karlsson  Wrist Shot   \n",
        "\n",
-       "  empty net  strength  \n",
-       "0     False       NaN  \n",
-       "1     False       NaN  \n",
-       "2     False       NaN  \n",
-       "3     False       NaN  \n",
-       "4     False       NaN  \n",
-       "5     False       NaN  \n",
-       "6     False       1.0  \n",
-       "7     False       NaN  \n",
-       "8     False       NaN  \n",
-       "9     False       NaN  "
+       "  empty net  strength_shorthand  strength_even  strength_powerplay  \n",
+       "0     False                 NaN            NaN                 NaN  \n",
+       "1     False                 NaN            NaN                 NaN  \n",
+       "2     False                 NaN            NaN                 NaN  \n",
+       "3     False                 NaN            NaN                 NaN  \n",
+       "4     False                 NaN            NaN                 NaN  \n",
+       "5     False                 NaN            NaN                 NaN  \n",
+       "6     False                 0.0            1.0                 0.0  \n",
+       "7     False                 NaN            NaN                 NaN  \n",
+       "8     False                 NaN            NaN                 NaN  \n",
+       "9     False                 NaN            NaN                 NaN  "
       ]
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 87
     }
    ],
    "metadata": {}
