--- a/notebooks/advanced_visualization.ipynb
+++ b/notebooks/advanced_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7d2a35cc",
    "metadata": {},
    "outputs": [
@@ -52,6 +52,7 @@
     "\n",
     "#define initial parameters\n",
     "im      = Image.open(r'{r}/figures/nhl_rink.png'.format(r=root_path)) \n",
+    "im2     = Image.open(r'{r}/figures/nhl_rink_top.png'.format(r=root_path)) \n",
     "seasons = ['20162017','20172018','20182019','20192020', '20202021']\n",
     "teams   = ['NOP','NJD','NYI','NYR','PHI','PIT','BOS','BUF','MTL','OTT','TOR','FLA','WSH','CHI','DET','NSH','STL','CGY','COL','EDM','VAN','ANA','DAL','LAK','SJS','CBJ','MIN','WPG','ARI','VGK','SEA']\n",
     "\n",
@@ -107,6 +108,7 @@
     "            marker=dict(color=\"DarkOrange\"),\n",
     "        )\n",
     "    )\n",
+    "\n",
     "   \n",
     "    # Add background image\n",
     "    fig.add_layout_image(\n",
@@ -126,7 +128,9 @@
     "    \n",
     "    \n",
     "    #run view\n",
-    "    fig.update_layout(template=\"plotly_white\")\n",
+    "    fig.update_layout(\n",
+    "        template=\"plotly_white\"\n",
+    "    )\n",
     "    fig.show()\n",
     "    \n",
     "    \n",
@@ -141,8 +145,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8411e68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f8d41eb206234fbb9ee23f340593a536",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Season', options=('20162017', '20172018', '20182019', '20192020', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "'''\n",
+    " based on season and team, draw all shooting point on the map\n",
+    " \n",
+    "'''\n",
+    "def vgraph(season,team):\n",
+    "    \n",
+    "    # Create figure\n",
+    "    fig = go.Figure()\n",
+    "    \n",
+    "    print('season: {s} team: {t} '.format(s=season,t=team))\n",
+    "    \n",
+    "    #load data for selected season / team\n",
+    "    csv_path  = root_path+'/ift6758/data/tabular/'+season+'.csv'\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "    df2 =df[df['offense_team_tricode'] == team].copy()\n",
+    "    \n",
+    "    # create new column abs(x) will be the new Y \n",
+    "    df2['y_abs'] = df2.apply(lambda row: abs(row.x_coords)-100, axis = 1)\n",
+    "    \n",
+    "    # Add traces\n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=df2.loc[:, 'y_coords'],\n",
+    "            y=df2.loc[:, 'y_abs'],\n",
+    "            mode=\"markers\",\n",
+    "            marker=dict(color=\"DarkOrange\"),\n",
+    "        )\n",
+    "    )\n",
+    "   \n",
+    "    # Add background image\n",
+    "    fig.add_layout_image(\n",
+    "        dict(\n",
+    "            source=im2,\n",
+    "            xref=\"x\",\n",
+    "            yref=\"y\",\n",
+    "            x=-42.5,   # dims in feet\n",
+    "            y=0,\n",
+    "            sizex=85,\n",
+    "            sizey=100,\n",
+    "            sizing=\"stretch\",\n",
+    "            opacity=0.8,\n",
+    "            layer=\"below\"\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "\n",
+    "    #run view\n",
+    "    fig.update_layout(\n",
+    "        width=85*8,\n",
+    "        height=100*8,\n",
+    "        autosize=False,\n",
+    "        margin=dict(t=0, b=0, l=0, r=0),\n",
+    "        template=\"plotly_white\"\n",
+    "    )\n",
+    "    fig.show()\n",
+    "    \n",
+    "    \n",
+    "w = interactive(vgraph,  season=widgets.Dropdown(options=seasons, value='20162017', description='Season',),\n",
+    "                         team  =widgets.Dropdown(options=teams,   value='MTL',      description='Team'),\n",
+    "                       )\n",
+    "\n",
+    "\n",
+    "display(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cd50998",
    "metadata": {},
    "outputs": [],
    "source": []
