reverse and shift axes, include legends

--- a/notebooks/advanced_visualization.ipynb
+++ b/notebooks/advanced_visualization.ipynb
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "id": "8411e68e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8d41eb206234fbb9ee23f340593a536",
+       "model_id": "dfe257350c7a477ebd45f5bd21ab30f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,9 +182,10 @@
     "    df2 =df[df['offense_team_tricode'] == team].copy()\n",
     "    \n",
     "    # create new column abs(x) will be the new Y \n",
-    "    df2['y_abs'] = df2.apply(lambda row: abs(row.x_coords)-100, axis = 1)\n",
+    "    df2['y_abs'] = df2.apply(lambda row: (abs(row.x_coords)-89.0)*(-1.0), axis = 1)\n",
     "    \n",
     "    # Add traces\n",
+    "   \n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
     "            x=df2.loc[:, 'y_coords'],\n",
@@ -193,6 +194,17 @@
     "            marker=dict(color=\"DarkOrange\"),\n",
     "        )\n",
     "    )\n",
+    "    '''\n",
+    "    # work in progress: need to undestand how to get the league avg shot \n",
+    "    fig.add_trace(\n",
+    "        go.Heatmap(\n",
+    "            z= shoot_per_hour\n",
+    "            x=df2.loc[:, 'y_coords'],\n",
+    "            y=df2.loc[:, 'y_abs'],\n",
+    "        colorscale='Viridis'\n",
+    "        )\n",
+    "    )\n",
+    "    '''\n",
     "   \n",
     "    # Add background image\n",
     "    fig.add_layout_image(\n",
@@ -201,7 +213,7 @@
     "            xref=\"x\",\n",
     "            yref=\"y\",\n",
     "            x=-42.5,   # dims in feet\n",
-    "            y=0,\n",
+    "            y=-11,\n",
     "            sizex=85,\n",
     "            sizey=100,\n",
     "            sizing=\"stretch\",\n",
@@ -210,15 +222,41 @@
     "        )\n",
     "    )\n",
     "    \n",
-    "\n",
-    "    #run view\n",
+    "    # reverse Y axis to be top-down direction\n",
+    "    fig.update_yaxes(\n",
+    "        autorange=\"reversed\"\n",
+    "    )\n",
+    "    \n",
+    "    # header title \n",
+    "    fig.add_annotation(x=.5, y=-22,\n",
+    "            text=\"Unblocked Shot Rate\",\n",
+    "            showarrow=False,\n",
+    "            font=dict(\n",
+    "                family=\"verdana, Arial\",\n",
+    "                size=18, \n",
+    "                color=\"#333333\",\n",
+    "            )\n",
+    "    )\n",
+    "    \n",
+    "    # axes, scales and margins\n",
     "    fig.update_layout(\n",
+    "        showlegend=False,\n",
+    "        xaxis_title=\"Distace from cenre of rink (ft)\",\n",
+    "        yaxis_title=\"Distance from goal line (ft)\",\n",
+    "        font=dict(\n",
+    "            family=\"Courier New, monospace\",\n",
+    "            size=12,\n",
+    "            color=\"#333333\"\n",
+    "        ),\n",
     "        width=85*8,\n",
     "        height=100*8,\n",
-    "        autosize=False,\n",
-    "        margin=dict(t=0, b=0, l=0, r=0),\n",
+    "        autosize=True,\n",
+    "        margin=dict(t=50, b=0, l=50, r=0), # graph margins\n",
     "        template=\"plotly_white\"\n",
     "    )\n",
+    "\n",
+    "        \n",
+    "    # run the visualization    \n",
     "    fig.show()\n",
     "    \n",
     "    \n",
@@ -233,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cd50998",
+   "id": "3a097785",
    "metadata": {},
    "outputs": [],
    "source": []
