--- a/notebooks/advanced_visualization.ipynb
+++ b/notebooks/advanced_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "7d2a35cc",
    "metadata": {},
    "outputs": [
@@ -45,6 +45,24 @@
     "    \"strength_shorthand\",\n",
     "    \"strength_even\",\n",
     "    \"strength_powerplay\",\n",
+    "    \n",
+    "    calcule el total estadistico de lugares de disparos para toda la liga \n",
+    "    para calcular la /media de disparos por hora = XX/\n",
+    "\n",
+    "    agrupe los disparos por equipo, y use la /media de la liga por hora=XX/ \n",
+    "    para calcular el exceso de disparos por hora.\n",
+    "    \n",
+    "    puede elegir representarlo como diferencia numerica en goles entre equipos o en porcentaje\n",
+    "    \n",
+    "    \n",
+    "    Compute aggregate statistics of shot locations across the entire league \n",
+    "    to compute league average shot rate per hour. \n",
+    "    You can make a few simplifying assumptions:\n",
+    "    You can assume all shots are even strength; this means you can simply aggregate over all shots rather than having to figure out whether a shot was an even strength shot or not (recall Q 4.2).\n",
+    "    You can assume each game lasts 60 minutes.\n",
+    "    Group shots by team, and use the league average shot rate per hour computed above \n",
+    "    to compute the excess shot rate per hour. \n",
+    "    You can choose to represent this as either a raw difference in goals between the teams, or a percentage. \n",
     "\n",
     "'''\n",
     "full_path = os.getcwd()\n",
@@ -61,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "aef12709",
    "metadata": {
     "scrolled": false
@@ -70,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48651903661e4f53996815a2444007d9",
+       "model_id": "d707bcc2911f40e881ec23f4c4ee47f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,14 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 116,
    "id": "8411e68e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfe257350c7a477ebd45f5bd21ab30f4",
+       "model_id": "c8815163153c4473bf9a7846e86a67dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,13 +199,111 @@
     "    #load data for selected season / team\n",
     "    csv_path  = root_path+'/ift6758/data/tabular/'+season+'.csv'\n",
     "    df = pd.read_csv(csv_path)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #league shoot count , create unique key\n",
+    "    df['team_game'] = df.apply(lambda row: str(row['game starttime'])+str(row['offense_team_tricode']), axis=1)\n",
+    "    l_shoot_count  =  df.shape[0] \n",
+    "    # equals a shoot count / season_games , asumming games are 60 mins\n",
+    "    l_season_games = df['team_game'].unique().shape[0]\n",
+    "    ashotr = l_shoot_count/l_season_games;  #around 30\n",
+    "    #print('---league----')\n",
+    "    #print('--season games counter = ',l_season_games)\n",
+    "    #print('--season games shoots  = ',l_shoot_count)\n",
+    "    #print('--average shoot rate per hour = ',ashotr) \n",
+    "  \n",
+    "    # create new column abs(x) will be the new Y \n",
+    "    df['y_abs'] = df.apply(lambda row: (abs(row.x_coords)-89.0)*(-1.0), axis = 1)\n",
+    "    \n",
+    "    # create a new dataframe for current team\n",
     "    df2 =df[df['offense_team_tricode'] == team].copy()\n",
     "    \n",
-    "    # create new column abs(x) will be the new Y \n",
-    "    df2['y_abs'] = df2.apply(lambda row: (abs(row.x_coords)-89.0)*(-1.0), axis = 1)\n",
+    "    \n",
+    "    #compute shots on current game\n",
+    "    df3 = df2.groupby(['game starttime'])['game starttime'].count().to_frame()\n",
+    "    \n",
+    "    # display('count shoot by date by current team ')\n",
+    "    #print('games counter df3-------')\n",
+    "    #print(df3)\n",
+    "    \n",
+    "    # total shots on current game is equal at number of records on this date for this team \n",
+    "    # index value is the game starttime \n",
+    "    # df3.loc[row['game starttime'],:]['game starttime']\n",
+    "    \n",
+    "    team_season_games = df2['game starttime'].unique().shape[0]\n",
+    "    \n",
+    "    # get the average shot rate all leagues all teams on each feet of the floor\n",
+    "    # we will map a dataframe of 80 x 85 records\n",
+    "    # print(df2.head())\n",
+    "    \n",
+    "    #tile_sz = 1 \n",
+    "    #x_range = list(range(-43,43,1))\n",
+    "    #y_range = list(range(-11,85,1))\n",
+    "    tile_sz = 5 \n",
+    "    x_range = list(range(-50,50,tile_sz))\n",
+    "    y_range = list(range(-10,80,tile_sz))\n",
+    "    \n",
+    "    #df_lmean= pd.DataFrame(columns=['x', 'y', 'all_shots', 'team_game_shoots', 'mean' , 'team_shoots'])\n",
+    "\n",
+    "    for xval in x_range:\n",
+    "        for yval in y_range:\n",
+    "            # all shoot inside the current tile\n",
+    "            tile_shots = df.loc[(df['y_coords']>=xval)           & \n",
+    "                                (df['y_coords']< (xval+tile_sz)) & \n",
+    "                                (df['y_abs']   >=yval)           &\n",
+    "                                (df['y_abs']   < (yval+tile_sz)) ]\n",
+    "            tile_count = tile_shots.shape[0]\n",
+    "            tile_mean_per_game  = tile_count/l_season_games\n",
+    "            # team shoot inside current tile\n",
+    "            teamtile_shoots = df2.loc[(df2['y_coords']>=xval)           & \n",
+    "                                      (df2['y_coords']< (xval+tile_sz)) & \n",
+    "                                      (df2['y_abs']   >=yval)           &\n",
+    "                                      (df2['y_abs']   < (yval+tile_sz)) ]\n",
+    "            tg_shoots = teamtile_shoots.shape[0]\n",
+    "            tile_mean_per_game_per_team = tg_shoots/team_season_games\n",
+    "            #find all records that match this coordinates to include the value \n",
+    "            for idx in teamtile_shoots.index:\n",
+    "                df2.loc[idx,'excess_shot_rate'] = tile_mean_per_game_per_team -  tile_mean_per_game \n",
+    "                \n",
+    "            '''\n",
+    "            df_lmean = pd.concat([df_lmean, \n",
+    "                pd.DataFrame([{'x':xval, \n",
+    "                               'y':yval, \n",
+    "                               'all_shots':tile_count,\n",
+    "                               'team_game_shoots':tg_shoots, \n",
+    "                               'mean':tile_mean_per_game,\n",
+    "                               'team_shoots':tile_mean_per_game_per_team\n",
+    "                              }])\n",
+    "                        ])\n",
+    "            ''' \n",
+    "            \n",
+    "    #print('-----medias----')                \n",
+    "    #print(df2)     \n",
+    "    \n",
+    "    #df2[['y_coords','y_abs']].groupby('iso_yrwk').agg(['mean','count'])\n",
+    "    \n",
+    "    # for each value x,y we have to find the values of the league average and compare\n",
+    "    # against the value of the team, this is the excess_shot_rate\n",
+    "    # df2['excess_shot_rate']= df2.apply(lambda row:  df3.loc[row['game starttime'],:]['game starttime'] - ashotr,axis = 1 )\n",
+    "    \n",
+    "    \n",
+    "    #print(df2)\n",
+    "    \n",
+    "    #team average shot rate per hour\n",
+    "    #shoot_count  =  df2.shape[0] \n",
+    "    # equals a shoot count / season_games , asumming games are 60 mins\n",
+    "    #season_games = df2['game starttime'].unique().shape[0]\n",
+    "    #print('----team----')\n",
+    "    #print('--season games counter = ',season_games)\n",
+    "    #print('--season games shoots  = ',shoot_count)\n",
+    "    #print('--average shoot rate per hour = ',shoot_count/season_games)\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # Add traces\n",
-    "   \n",
+    "    '''\n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
     "            x=df2.loc[:, 'y_coords'],\n",
@@ -196,11 +314,23 @@
     "    )\n",
     "    '''\n",
     "    # work in progress: need to undestand how to get the league avg shot \n",
+    "   \n",
     "    fig.add_trace(\n",
-    "        go.Heatmap(\n",
-    "            z= shoot_per_hour\n",
+    "        go.Contour(\n",
+    "            z=df2.loc[:, 'excess_shot_rate'],\n",
     "            x=df2.loc[:, 'y_coords'],\n",
     "            y=df2.loc[:, 'y_abs'],\n",
+    "            opacity=0.6,\n",
+    "        colorscale='Viridis'\n",
+    "        )\n",
+    "    )\n",
+    "    '''\n",
+    "    \n",
+    "    fig.add_trace(\n",
+    "        go.Surface((\n",
+    "            x=df2.loc[:, 'y_coords'],\n",
+    "            y=df2.loc[:, 'y_abs'],\n",
+    "            z=df2.loc[:, 'excess_shot_rate'],\n",
     "        colorscale='Viridis'\n",
     "        )\n",
     "    )\n",
@@ -217,7 +347,6 @@
     "            sizex=85,\n",
     "            sizey=100,\n",
     "            sizing=\"stretch\",\n",
-    "            opacity=0.8,\n",
     "            layer=\"below\"\n",
     "        )\n",
     "    )\n",
@@ -270,11 +399,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a097785",
-   "metadata": {},
+   "execution_count": 65,
+   "id": "40c6ee8b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "csv_path  = root_path+'/ift6758/data/tabular/'+'20162017'+'.csv'\n",
+    "df = pd.read_csv(csv_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "40a8b227",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game starttime</th>\n",
+       "      <th>game endtime</th>\n",
+       "      <th>gameId</th>\n",
+       "      <th>offense_team_id</th>\n",
+       "      <th>offense_team_name</th>\n",
+       "      <th>offense_team_tricode</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>x_coords</th>\n",
+       "      <th>y_coords</th>\n",
+       "      <th>goalie_id</th>\n",
+       "      <th>goalie_name</th>\n",
+       "      <th>shooter_id</th>\n",
+       "      <th>shooter_name</th>\n",
+       "      <th>shot type</th>\n",
+       "      <th>empty net</th>\n",
+       "      <th>strength_shorthand</th>\n",
+       "      <th>strength_even</th>\n",
+       "      <th>strength_powerplay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Toronto Maple Leafs</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-77.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8467950</td>\n",
+       "      <td>Craig Anderson</td>\n",
+       "      <td>8478483</td>\n",
+       "      <td>Mitchell Marner</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ottawa Senators</td>\n",
+       "      <td>OTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>8475883</td>\n",
+       "      <td>Frederik Andersen</td>\n",
+       "      <td>8467967</td>\n",
+       "      <td>Chris Kelly</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ottawa Senators</td>\n",
+       "      <td>OTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>-38.0</td>\n",
+       "      <td>8475883</td>\n",
+       "      <td>Frederik Andersen</td>\n",
+       "      <td>8476879</td>\n",
+       "      <td>Cody Ceci</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ottawa Senators</td>\n",
+       "      <td>OTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>8475883</td>\n",
+       "      <td>Frederik Andersen</td>\n",
+       "      <td>8474578</td>\n",
+       "      <td>Erik Karlsson</td>\n",
+       "      <td>Slap Shot</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-12T23:00:00Z</td>\n",
+       "      <td>2016-10-13T01:56:40Z</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Toronto Maple Leafs</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-34.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>8467950</td>\n",
+       "      <td>Craig Anderson</td>\n",
+       "      <td>8475716</td>\n",
+       "      <td>Martin Marincin</td>\n",
+       "      <td>Wrist Shot</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         game starttime          game endtime  gameId  offense_team_id  \\\n",
+       "0  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       0               10   \n",
+       "1  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       1                9   \n",
+       "2  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       2                9   \n",
+       "3  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       3                9   \n",
+       "4  2016-10-12T23:00:00Z  2016-10-13T01:56:40Z       4               10   \n",
+       "\n",
+       "     offense_team_name offense_team_tricode  goal  x_coords  y_coords  \\\n",
+       "0  Toronto Maple Leafs                  TOR     0     -77.0       5.0   \n",
+       "1      Ottawa Senators                  OTT     0      86.0      13.0   \n",
+       "2      Ottawa Senators                  OTT     0      23.0     -38.0   \n",
+       "3      Ottawa Senators                  OTT     0      33.0     -15.0   \n",
+       "4  Toronto Maple Leafs                  TOR     0     -34.0      28.0   \n",
+       "\n",
+       "   goalie_id        goalie_name  shooter_id     shooter_name   shot type  \\\n",
+       "0    8467950     Craig Anderson     8478483  Mitchell Marner  Wrist Shot   \n",
+       "1    8475883  Frederik Andersen     8467967      Chris Kelly  Wrist Shot   \n",
+       "2    8475883  Frederik Andersen     8476879        Cody Ceci  Wrist Shot   \n",
+       "3    8475883  Frederik Andersen     8474578    Erik Karlsson   Slap Shot   \n",
+       "4    8467950     Craig Anderson     8475716  Martin Marincin  Wrist Shot   \n",
+       "\n",
+       "  empty net  strength_shorthand  strength_even  strength_powerplay  \n",
+       "0     False                 NaN            NaN                 NaN  \n",
+       "1     False                 NaN            NaN                 NaN  \n",
+       "2     False                 NaN            NaN                 NaN  \n",
+       "3     False                 NaN            NaN                 NaN  \n",
+       "4     False                 NaN            NaN                 NaN  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
