excess shot rate prior transpose

--- a/notebooks/advanced_visualization.ipynb
+++ b/notebooks/advanced_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7d2a35cc",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aef12709",
    "metadata": {
     "scrolled": false
@@ -88,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d707bcc2911f40e881ec23f4c4ee47f3",
+       "model_id": "b77f14cbeb4e4d709527a6bce19c6cf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,13 +115,13 @@
     "    #load data for selected season / team\n",
     "    csv_path  = root_path+'/ift6758/data/tabular/'+season+'.csv'\n",
     "    df = pd.read_csv(csv_path)\n",
-    "    df2 =df[df['offense_team_tricode'] == team]\n",
+    "    df_team =df[df['offense_team_tricode'] == team]\n",
     "    \n",
     "    # Add traces\n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
-    "            x=df2.loc[:, 'x_coords'],\n",
-    "            y=df2.loc[:, 'y_coords'],\n",
+    "            x=df_team.loc[:, 'x_coords'],\n",
+    "            y=df_team.loc[:, 'y_coords'],\n",
     "            mode=\"markers\",\n",
     "            marker=dict(color=\"DarkOrange\"),\n",
     "        )\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "id": "8411e68e",
    "metadata": {
     "scrolled": false
@@ -172,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8815163153c4473bf9a7846e86a67dc",
+       "model_id": "225133e455914935beeaa552cba62277",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,48 +196,66 @@
     "    \n",
     "    print('season: {s} team: {t} '.format(s=season,t=team))\n",
     "    \n",
-    "    #load data for selected season / team\n",
+    "    # load data for selected season / team\n",
     "    csv_path  = root_path+'/ift6758/data/tabular/'+season+'.csv'\n",
     "    df = pd.read_csv(csv_path)\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    #league shoot count , create unique key\n",
+    "    # league shoot count , create unique key\n",
     "    df['team_game'] = df.apply(lambda row: str(row['game starttime'])+str(row['offense_team_tricode']), axis=1)\n",
     "    l_shoot_count  =  df.shape[0] \n",
-    "    # equals a shoot count / season_games , asumming games are 60 mins\n",
-    "    l_season_games = df['team_game'].unique().shape[0]\n",
-    "    ashotr = l_shoot_count/l_season_games;  #around 30\n",
-    "    #print('---league----')\n",
-    "    #print('--season games counter = ',l_season_games)\n",
-    "    #print('--season games shoots  = ',l_shoot_count)\n",
-    "    #print('--average shoot rate per hour = ',ashotr) \n",
-    "  \n",
-    "    # create new column abs(x) will be the new Y \n",
-    "    df['y_abs'] = df.apply(lambda row: (abs(row.x_coords)-89.0)*(-1.0), axis = 1)\n",
     "    \n",
-    "    # create a new dataframe for current team\n",
-    "    df2 =df[df['offense_team_tricode'] == team].copy()\n",
+    "    # all teams season games counter\n",
+    "    season_games_counter = df['team_game'].unique().shape[0]\n",
     "    \n",
-    "    \n",
-    "    #compute shots on current game\n",
-    "    df3 = df2.groupby(['game starttime'])['game starttime'].count().to_frame()\n",
-    "    \n",
-    "    # display('count shoot by date by current team ')\n",
-    "    #print('games counter df3-------')\n",
-    "    #print(df3)\n",
+    "    # Filter data leaving only current team\n",
+    "    df_team = df[df['offense_team_tricode'] == team].copy()\n",
     "    \n",
     "    # total shots on current game is equal at number of records on this date for this team \n",
-    "    # index value is the game starttime \n",
+    "    team_season_games = df_team['game starttime'].unique().shape[0]    \n",
+    "    \n",
+    "    '''  start funny thing ''' \n",
+    "    # ----------------------------------------------------------------------------\n",
+    "    # build [excess_shot_rate] row, that represent on a tile size=\"tile_sz\" \n",
+    "    # the difference between the average shot on this tile for all teams all games\n",
+    "    # and the current number of shoots for the current team\n",
+    "    # ----------------------------------------------------------------------------\n",
+    "    \n",
+    "    tile_sz = 5 \n",
+    "    x_range = list(range(-100,100,tile_sz))\n",
+    "    y_range = list(range( -50, 50,tile_sz))\n",
+    "    \n",
+    "    for xval in x_range:\n",
+    "        for yval in y_range:\n",
+    "            # all shoot inside the current tile\n",
+    "            tile_shots = df.loc[(df['x_coords'] >= xval         ) & \n",
+    "                                (df['x_coords'] < (xval+tile_sz)) & \n",
+    "                                (df['y_coords'] >= yval         ) &\n",
+    "                                (df['y_coords'] < (yval+tile_sz)) ]\n",
+    "            tile_count = tile_shots.shape[0]\n",
+    "            tile_mean_per_game  = tile_count/season_games_counter\n",
+    "            # team shoot inside current tile\n",
+    "            teamtile_shoots = df_team.loc[(df_team['x_coords'] >= xval         ) & \n",
+    "                                          (df_team['x_coords'] < (xval+tile_sz)) & \n",
+    "                                          (df_team['y_coords'] >= yval         ) &\n",
+    "                                          (df_team['y_coords'] < (yval+tile_sz)) ]\n",
+    "            tg_shoots = teamtile_shoots.shape[0]\n",
+    "            tile_mean_per_game_per_team = tg_shoots/team_season_games\n",
+    "            #find all records that match this coordinates to include the value \n",
+    "            for idx in teamtile_shoots.index:\n",
+    "                df_team.loc[idx,'excess_shot_rate'] = tile_mean_per_game_per_team -  tile_mean_per_game \n",
+    "                \n",
+    "    '''  ends funny thing ''' \n",
+    "\n",
+    "    # Transpose X column, will be the new Y \n",
+    "    df_team['y_abs'] = df_team.apply(lambda row: (abs(row.x_coords)-89.0)*(-1.0), axis = 1)\n",
+    "    # Transpose Y because is a rotation and not a mirror \n",
+    "    df_team['x_abs'] = df_team.apply(lambda row: (row.y_coords*(-1.0)),      axis = 1)\n",
+    "    \n",
+    "    #compute shots on current game\n",
+    "    # df3 = df_team.groupby(['game starttime'])['game starttime'].count().to_frame()\n",
     "    # df3.loc[row['game starttime'],:]['game starttime']\n",
-    "    \n",
-    "    team_season_games = df2['game starttime'].unique().shape[0]\n",
-    "    \n",
-    "    # get the average shot rate all leagues all teams on each feet of the floor\n",
-    "    # we will map a dataframe of 80 x 85 records\n",
-    "    # print(df2.head())\n",
-    "    \n",
+    "\n",
+    "    \"\"\" \n",
     "    #tile_sz = 1 \n",
     "    #x_range = list(range(-43,43,1))\n",
     "    #y_range = list(range(-11,85,1))\n",
@@ -245,7 +263,6 @@
     "    x_range = list(range(-50,50,tile_sz))\n",
     "    y_range = list(range(-10,80,tile_sz))\n",
     "    \n",
-    "    #df_lmean= pd.DataFrame(columns=['x', 'y', 'all_shots', 'team_game_shoots', 'mean' , 'team_shoots'])\n",
     "\n",
     "    for xval in x_range:\n",
     "        for yval in y_range:\n",
@@ -255,88 +272,69 @@
     "                                (df['y_abs']   >=yval)           &\n",
     "                                (df['y_abs']   < (yval+tile_sz)) ]\n",
     "            tile_count = tile_shots.shape[0]\n",
-    "            tile_mean_per_game  = tile_count/l_season_games\n",
+    "            tile_mean_per_game  = tile_count/season_games_counter\n",
     "            # team shoot inside current tile\n",
-    "            teamtile_shoots = df2.loc[(df2['y_coords']>=xval)           & \n",
-    "                                      (df2['y_coords']< (xval+tile_sz)) & \n",
-    "                                      (df2['y_abs']   >=yval)           &\n",
-    "                                      (df2['y_abs']   < (yval+tile_sz)) ]\n",
+    "            teamtile_shoots = df_team.loc[(df_team['y_coords']>=xval)           & \n",
+    "                                          (df_team['y_coords']< (xval+tile_sz)) & \n",
+    "                                          (df_team['y_abs']   >=yval)           &\n",
+    "                                          (df_team['y_abs']   < (yval+tile_sz)) ]\n",
     "            tg_shoots = teamtile_shoots.shape[0]\n",
     "            tile_mean_per_game_per_team = tg_shoots/team_season_games\n",
     "            #find all records that match this coordinates to include the value \n",
     "            for idx in teamtile_shoots.index:\n",
-    "                df2.loc[idx,'excess_shot_rate'] = tile_mean_per_game_per_team -  tile_mean_per_game \n",
+    "                df_team.loc[idx,'excess_shot_rate'] = tile_mean_per_game_per_team -  tile_mean_per_game \n",
     "                \n",
-    "            '''\n",
-    "            df_lmean = pd.concat([df_lmean, \n",
-    "                pd.DataFrame([{'x':xval, \n",
-    "                               'y':yval, \n",
-    "                               'all_shots':tile_count,\n",
-    "                               'team_game_shoots':tg_shoots, \n",
-    "                               'mean':tile_mean_per_game,\n",
-    "                               'team_shoots':tile_mean_per_game_per_team\n",
-    "                              }])\n",
-    "                        ])\n",
-    "            ''' \n",
-    "            \n",
-    "    #print('-----medias----')                \n",
-    "    #print(df2)     \n",
+    "    \"\"\"\n",
     "    \n",
-    "    #df2[['y_coords','y_abs']].groupby('iso_yrwk').agg(['mean','count'])\n",
-    "    \n",
-    "    # for each value x,y we have to find the values of the league average and compare\n",
-    "    # against the value of the team, this is the excess_shot_rate\n",
-    "    # df2['excess_shot_rate']= df2.apply(lambda row:  df3.loc[row['game starttime'],:]['game starttime'] - ashotr,axis = 1 )\n",
-    "    \n",
-    "    \n",
-    "    #print(df2)\n",
-    "    \n",
-    "    #team average shot rate per hour\n",
-    "    #shoot_count  =  df2.shape[0] \n",
-    "    # equals a shoot count / season_games , asumming games are 60 mins\n",
-    "    #season_games = df2['game starttime'].unique().shape[0]\n",
-    "    #print('----team----')\n",
-    "    #print('--season games counter = ',season_games)\n",
-    "    #print('--season games shoots  = ',shoot_count)\n",
-    "    #print('--average shoot rate per hour = ',shoot_count/season_games)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # Add traces\n",
+    "    # Trace test 01 : scatter, dont use escess shot rate\n",
     "    '''\n",
     "    fig.add_trace(\n",
     "        go.Scatter(\n",
-    "            x=df2.loc[:, 'y_coords'],\n",
-    "            y=df2.loc[:, 'y_abs'],\n",
+    "            x=df_team.loc[:, 'y_coords'],\n",
+    "            y=df_team.loc[:, 'y_abs'],\n",
     "            mode=\"markers\",\n",
     "            marker=dict(color=\"DarkOrange\"),\n",
     "        )\n",
     "    )\n",
     "    '''\n",
-    "    # work in progress: need to undestand how to get the league avg shot \n",
-    "   \n",
-    "    fig.add_trace(\n",
-    "        go.Contour(\n",
-    "            z=df2.loc[:, 'excess_shot_rate'],\n",
-    "            x=df2.loc[:, 'y_coords'],\n",
-    "            y=df2.loc[:, 'y_abs'],\n",
+    "    # Trace test 02 : HeatMap\n",
+    "    '''\n",
+    "        fig.add_trace(\n",
+    "        go.Heatmap(\n",
+    "            z=df_team.loc[:, 'excess_shot_rate'],\n",
+    "            x=df_team.loc[:, 'y_coords'],\n",
+    "            y=df_team.loc[:, 'y_abs'],\n",
     "            opacity=0.6,\n",
     "        colorscale='Viridis'\n",
     "        )\n",
     "    )\n",
-    "    '''\n",
+    "    ''' \n",
+    "    \n",
+    "    # Trace test 03 : Contour\n",
     "    \n",
     "    fig.add_trace(\n",
-    "        go.Surface((\n",
-    "            x=df2.loc[:, 'y_coords'],\n",
-    "            y=df2.loc[:, 'y_abs'],\n",
-    "            z=df2.loc[:, 'excess_shot_rate'],\n",
+    "        go.Contour(\n",
+    "            z=df_team.loc[:, 'excess_shot_rate'],\n",
+    "            x=df_team.loc[:, 'x_abs'],\n",
+    "            y=df_team.loc[:, 'y_abs'],\n",
+    "            opacity=0.6,\n",
+    "        colorscale='Viridis'\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    # Trace test 04 : Surface\n",
+    "    '''\n",
+    "    fig.add_trace(\n",
+    "        go.Surface(\n",
+    "            z=df_team.loc[:, 'excess_shot_rate'],\n",
+    "            x=df_team.loc[:, 'y_coords'],\n",
+    "            y=df_team.loc[:, 'y_abs'],\n",
     "        colorscale='Viridis'\n",
     "        )\n",
     "    )\n",
     "    '''\n",
     "   \n",
-    "    # Add background image\n",
+    "    # Add background image with the game limits\n",
     "    fig.add_layout_image(\n",
     "        dict(\n",
     "            source=im2,\n",
@@ -356,7 +354,7 @@
     "        autorange=\"reversed\"\n",
     "    )\n",
     "    \n",
-    "    # header title \n",
+    "    # header title -------------------------- \n",
     "    fig.add_annotation(x=.5, y=-22,\n",
     "            text=\"Unblocked Shot Rate\",\n",
     "            showarrow=False,\n",
@@ -367,7 +365,7 @@
     "            )\n",
     "    )\n",
     "    \n",
-    "    # axes, scales and margins\n",
+    "    # axes, scales and margins --------------\n",
     "    fig.update_layout(\n",
     "        showlegend=False,\n",
     "        xaxis_title=\"Distace from cenre of rink (ft)\",\n",
@@ -413,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "40a8b227",
+   "id": "1e2f6903",
    "metadata": {},
    "outputs": [
     {
